Added Low level algorithm. Weird behavior.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JavaImp
+application.vendor=yzhang
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JavaImp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.EJML-core-0.26-sources.jar=ejml-v0.26-libs/EJML-core-0.26-sources.jar
-file.reference.EJML-core-0.26.jar=ejml-v0.26-libs/EJML-core-0.26.jar
-file.reference.EJML-equation-0.26-sources.jar=ejml-v0.26-libs/EJML-equation-0.26-sources.jar
-file.reference.EJML-equation-0.26.jar=ejml-v0.26-libs/EJML-equation-0.26.jar
-file.reference.EJML-experimental-0.26-sources.jar=ejml-v0.26-libs/EJML-experimental-0.26-sources.jar
-file.reference.EJML-experimental-0.26.jar=ejml-v0.26-libs/EJML-experimental-0.26.jar
+file.reference.EJML-core-0.26-sources.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-core-0.26-sources.jar
+file.reference.EJML-core-0.26.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-core-0.26.jar
+file.reference.EJML-equation-0.26-sources.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-equation-0.26-sources.jar
+file.reference.EJML-equation-0.26.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-equation-0.26.jar
+file.reference.EJML-experimental-0.26-sources.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-experimental-0.26-sources.jar
+file.reference.EJML-experimental-0.26.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-experimental-0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
