--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,20 +30,32 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.EJML-core-0.26-sources.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-core-0.26-sources.jar
+file.reference.EJML-core-0.26-sources.jar-1=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-core-0.26-sources.jar
 file.reference.EJML-core-0.26.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-core-0.26.jar
+file.reference.EJML-core-0.26.jar-1=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-core-0.26.jar
 file.reference.EJML-equation-0.26-sources.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-equation-0.26-sources.jar
+file.reference.EJML-equation-0.26-sources.jar-1=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-equation-0.26-sources.jar
 file.reference.EJML-equation-0.26.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-equation-0.26.jar
+file.reference.EJML-equation-0.26.jar-1=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-equation-0.26.jar
 file.reference.EJML-experimental-0.26-sources.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-experimental-0.26-sources.jar
+file.reference.EJML-experimental-0.26-sources.jar-1=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-experimental-0.26-sources.jar
 file.reference.EJML-experimental-0.26.jar=/home/yzhang/00ME/Education/UW/CS860/ejml-v0.26-libs/EJML-experimental-0.26.jar
+file.reference.EJML-experimental-0.26.jar-1=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-experimental-0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.EJML-core-0.26-sources.jar}:\
+    ${file.reference.EJML-core-0.26-sources.jar-1}:\
+    ${file.reference.EJML-core-0.26.jar-1}:\
+    ${file.reference.EJML-equation-0.26-sources.jar-1}:\
+    ${file.reference.EJML-equation-0.26.jar-1}:\
+    ${file.reference.EJML-experimental-0.26-sources.jar-1}:\
+    ${file.reference.EJML-experimental-0.26.jar-1}:\
     ${file.reference.EJML-core-0.26.jar}:\
     ${file.reference.EJML-equation-0.26-sources.jar}:\
     ${file.reference.EJML-equation-0.26.jar}:\
     ${file.reference.EJML-experimental-0.26-sources.jar}:\
-    ${file.reference.EJML-experimental-0.26.jar}
+    ${file.reference.EJML-experimental-0.26.jar}:\
+    ${file.reference.EJML-core-0.26-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
