--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/JavaImp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.EJML-core-0.26-sources.jar=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-core-0.26-sources.jar
-file.reference.EJML-core-0.26.jar=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-core-0.26.jar
-file.reference.EJML-equation-0.26-sources.jar=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-equation-0.26-sources.jar
-file.reference.EJML-equation-0.26.jar=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-equation-0.26.jar
-file.reference.EJML-experimental-0.26-sources.jar=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-experimental-0.26-sources.jar
-file.reference.EJML-experimental-0.26.jar=/home/y825zhan/00ME/CS860/ejml-v0.26-libs/EJML-experimental-0.26.jar
+file.reference.EJML-core-0.26-sources.jar=../ejml-v0.26-libs/EJML-core-0.26-sources.jar
+file.reference.EJML-core-0.26.jar=../ejml-v0.26-libs/EJML-core-0.26.jar
+file.reference.EJML-equation-0.26-sources.jar=../ejml-v0.26-libs/EJML-equation-0.26-sources.jar
+file.reference.EJML-equation-0.26.jar=../ejml-v0.26-libs/EJML-equation-0.26.jar
+file.reference.EJML-experimental-0.26-sources.jar=../ejml-v0.26-libs/EJML-experimental-0.26-sources.jar
+file.reference.EJML-experimental-0.26.jar=../ejml-v0.26-libs/EJML-experimental-0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
