--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/JavaImp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-math3-3.3-javadoc.jar=../commons-math3-3.3/commons-math3-3.3-javadoc.jar
+file.reference.commons-math3-3.3.jar=../commons-math3-3.3/commons-math3-3.3.jar
 file.reference.EJML-core-0.26-sources.jar=../ejml-v0.26-libs/EJML-core-0.26-sources.jar
 file.reference.EJML-core-0.26.jar=../ejml-v0.26-libs/EJML-core-0.26.jar
 file.reference.EJML-equation-0.26-sources.jar=../ejml-v0.26-libs/EJML-equation-0.26-sources.jar
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.EJML-equation-0.26-sources.jar}:\
     ${file.reference.EJML-equation-0.26.jar}:\
     ${file.reference.EJML-experimental-0.26-sources.jar}:\
-    ${file.reference.EJML-experimental-0.26.jar}
+    ${file.reference.EJML-experimental-0.26.jar}:\
+    ${file.reference.commons-math3-3.3-javadoc.jar}:\
+    ${file.reference.commons-math3-3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
